# globaleaks-rizeon

./: .gitignore  CHANGELOG  LICENSE  publiccode.yml
backend/: pyproject.toml
backend/globaleaks/: __init__.py  backend.py  orm.py  sessions.py  settings.py  state.py
backend/globaleaks/db/: __init__.py  appdata.py  migration.py
backend/globaleaks/db/migrations/update_53/: __init__.py
backend/globaleaks/db/migrations/update_54/: __init__.py
backend/globaleaks/db/migrations/update_55/: __init__.py
backend/globaleaks/db/migrations/update_57/: __init__.py
backend/globaleaks/handlers/: base.py  public.py  security.py  signup.py  staticfile.py  support.py
backend/globaleaks/handlers/admin/: context.py  field.py  file.py  https.py  network.py  node.py  notification.py  operation.py  step.py  submission_statuses.py  tenant.py  user.py
backend/globaleaks/handlers/auth/: __init__.py
backend/globaleaks/handlers/custodian/: __init__.py
backend/globaleaks/handlers/recipient/: __init__.py  export.py  rtip.py
backend/globaleaks/handlers/user/: __init__.py  operation.py  reset_password.py  validate_email.py
backend/globaleaks/handlers/whistleblower/: attachment.py  submission.py  wbtip.py
backend/globaleaks/jobs/: __init__.py  anomalies.py  certificate_check.py  delivery.py  job.py  notification.py  periodic_daily.py  periodic_hourly.py  periodic_minutely.py  pgp_check.py  update_check.py
backend/globaleaks/mocks/: twisted_mocks.py
backend/globaleaks/models/: __init__.py  config_desc.py  properties.py  serializers.py
backend/globaleaks/rest/: api.py  decorators.py  requests.py
backend/globaleaks/services/: tor.py
backend/globaleaks/tests/: helpers.py  test_orm.py  test_twisted_mocks.py
backend/globaleaks/tests/handlers/: test_base.py  test_public.py  test_signup.py  test_sitemap.py  test_support.py
backend/globaleaks/tests/jobs/: test_update_check.py
backend/globaleaks/tests/models/: test_config.py
backend/globaleaks/tests/rest/: test_api.py  test_decorators.py
backend/globaleaks/tests/utils/: test_crypto.py  test_fs.py  test_letsencrypt.py  test_log.py  test_tempdict.py  test_tls.py  test_zipstream.py
backend/globaleaks/utils/: agent.py  crypto.py  defang.py  fs.py  ip.py  json.py  mail.py  ratelimit.py  securetempfile.py  sni.py  tempdict.py  templating.py  tls.py  token.py  utility.py  zipstream.py
backend/requirements/: requirements.in.bookworm  requirements.in.bullseye  requirements.in.dev  requirements.in.focal  requirements.in.jammy  requirements.in.noble  requirements.in.resolute  requirements.in.trixie  requirements.txt.bookworm  requirements.txt.bullseye  requirements.txt.dev  requirements.txt.focal  requirements.txt.jammy  requirements.txt.noble  requirements.txt.resolute  requirements.txt.trixie
client/: Gruntfile.js  angular.json  (+3 more)
(+204 files in other folders)
